--- a/test-output/index.html
+++ b/test-output/index.html
@@ -104,17 +104,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.test.Analytics_Code.Testing" class="method navigator-link" hash-for-method="analytics">analytics</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.test.Analytics_Code.Code4humanity" class="method navigator-link" hash-for-method="code">code</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.test.Analytics_Code.Testing" class="method navigator-link" hash-for-method="code">code</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.test.Analytics_Code.Code4humanity" class="method navigator-link" hash-for-method="launch">launch</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.test.Analytics_Code.Testing" class="method navigator-link" hash-for-method="launch">launch</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.test.Analytics_Code.Code4humanity" class="method navigator-link" hash-for-method="login">login</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -132,16 +132,9 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.test.Analytics_Code.Testing</span>
+              <span class="class-name">com.test.Analytics_Code.Code4humanity</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="analytics">
-                  </a> <!-- analytics -->
-                  <span class="method-name">analytics</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
                   <a name="code">
@@ -156,12 +149,19 @@
                   <span class="method-name">launch</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="login">
+                  </a> <!-- login -->
+                  <span class="method-name">login</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/tmp/testng-eclipse-781814724/testng-customsuite.xml</span>
+            <span class="header-content">/tmp/testng-eclipse-1523682406/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -170,7 +170,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.test.Analytics_Code.Testing&quot;/&gt;
+      &lt;class name=&quot;com.test.Analytics_Code.Code4humanity&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -212,22 +212,22 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'launch')
-data.setCell(0, 2, 'com.test.Analytics_Code.Testing')
-data.setCell(0, 3, 131418);
+data.setCell(0, 1, 'login')
+data.setCell(0, 2, 'com.test.Analytics_Code.Code4humanity')
+data.setCell(0, 3, 18516);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'analytics')
-data.setCell(1, 2, 'com.test.Analytics_Code.Testing')
-data.setCell(1, 3, 10123);
+data.setCell(1, 1, 'code')
+data.setCell(1, 2, 'com.test.Analytics_Code.Code4humanity')
+data.setCell(1, 3, 6136);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'code')
-data.setCell(2, 2, 'com.test.Analytics_Code.Testing')
-data.setCell(2, 3, 10037);
+data.setCell(2, 1, 'launch')
+data.setCell(2, 2, 'com.test.Analytics_Code.Code4humanity')
+data.setCell(2, 3, 5402);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 minutes</span>
+              <span class="suite-total-time">Total running time: 30 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -253,26 +253,26 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.test.Analytics_Code.Testing</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.test.Analytics_Code.Code4humanity</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">setup</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">launch</span>
-                <span class="method-start">2068 ms</span>
+                <span class="method-start">1418 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">analytics</span>
-                <span class="method-start">133492 ms</span>
+                <span class="method-name">login</span>
+                <span class="method-start">6823 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">code</span>
-                <span class="method-start">143618 ms</span>
+                <span class="method-start">25340 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">close</span>
-                <span class="method-start">153657 ms</span>
+                <span class="method-start">31477 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
