--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,15 +4,11 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.test.Analytics_Code.Testing</td>
+<td>com.test.Analytics_Code.Code4humanity</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>analytics</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>code</td>
@@ -20,6 +16,10 @@
 <tr>
 <td>&nbsp;</td>
 <td>launch</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>login</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
